--- a/html/mpc3kad.html
+++ b/html/mpc3kad.html
@@ -51,3 +51,4 @@
   </table>
 </div>
 <script src="js/mpc3kad.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
