--- a/html/mpc3kad.html
+++ b/html/mpc3kad.html
@@ -13,41 +13,43 @@
   </div>
   <div class="spacer2">
   </div>
-  <table>
-    <tr>
-      <td>
-        <div>1<audio controls src="https://github.com/ph2290/MPC3000AD/blob/main/assets/radioseeker.wav?raw=true"></audio><input type="file" /></div>
-      </td>
-      <td>
-        <div>2<audio controls src="https://instrumentbible.github.io/sampler.js/assets/snare.wav"></audio><input type="file" /></div>
-      </td>
-      <td>
-        <div>3<audio controls src="https://instrumentbible.github.io/sampler.js/assets/tom.wav"></audio><input type="file" /></div>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <div>4<audio controls src="https://instrumentbible.github.io/sampler.js/assets/cymbal.wav"></audio><input type="file" /></div>
-      </td>
-      <td>
-        <div>5<audio controls src="https://instrumentbible.github.io/sampler.js/assets/hat1.wav"></audio><input type="file" /></div>
-      </td>
-      <td>
-        <div>6<audio controls src="https://instrumentbible.github.io/sampler.js/assets/hat2.wav"></audio><input type="file" /></div>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <div>7<audio controls src="https://instrumentbible.github.io/sampler.js/assets/hat3.wav"></audio><input type="file" /></div>
-      </td>
-      <td>
-        <div>8<audio controls src="https://instrumentbible.github.io/sampler.js/assets/click.wav"></audio><input type="file" /></div>
-      </td>
-      <td>
-        <div>9<audio controls src="https://instrumentbible.github.io/sampler.js/assets/click.wav"></audio><input type="file" /></div>
-      </td>
-    </tr>
+  <div class="triggerpad">
+    <table>
+      <tr>
+        <td>
+          <div>1<audio controls src="https://github.com/ph2290/MPC3000AD/blob/main/assets/radioseeker.wav?raw=true"></audio><input type="file" /></div>
+        </td>
+        <td>
+          <div>2<audio controls src="https://instrumentbible.github.io/sampler.js/assets/snare.wav"></audio><input type="file" /></div>
+        </td>
+        <td>
+          <div>3<audio controls src="https://instrumentbible.github.io/sampler.js/assets/tom.wav"></audio><input type="file" /></div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div>4<audio controls src="https://instrumentbible.github.io/sampler.js/assets/cymbal.wav"></audio><input type="file" /></div>
+        </td>
+        <td>
+          <div>5<audio controls src="https://instrumentbible.github.io/sampler.js/assets/hat1.wav"></audio><input type="file" /></div>
+        </td>
+        <td>
+          <div>6<audio controls src="https://instrumentbible.github.io/sampler.js/assets/hat2.wav"></audio><input type="file" /></div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div>7<audio controls src="https://instrumentbible.github.io/sampler.js/assets/hat3.wav"></audio><input type="file" /></div>
+        </td>
+        <td>
+          <div>8<audio controls src="https://instrumentbible.github.io/sampler.js/assets/click.wav"></audio><input type="file" /></div>
+        </td>
+        <td>
+          <div>9<audio controls src="https://instrumentbible.github.io/sampler.js/assets/click.wav"></audio><input type="file" /></div>
+        </td>
+      </tr>
 
-  </table>
+    </table>
+  </div>
 </div>
 <script src="js/mpc3kad.js"></script>
