--- a/html/mpc3kad.html
+++ b/html/mpc3kad.html
@@ -7,8 +7,10 @@
   <div id="screen">
     =========== MPC 3000AD ===========
 
+    
     Click a button below
 
+    
     ==================================
   </div>
   <div class="spacer2">
@@ -52,4 +54,4 @@
     </table>
   </div>
 </div>
-<script src="js/mpc3kad.js"></script>
+<script src="js/sampler.js"></script>
