--- a/html/index.html
+++ b/html/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="mp3kad.css">
+    <title>MPC 3000AD</title>
+</head>
+  
 <div class="container">
   <div id="samplerskin">
     <img src="https://github.com/ph2290/MPC3000AD/blob/main/assets/MPC3KAD1.svg?raw=true" alt="sampler image" />
