--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mp3kad.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" </script>
+    <script src="js/sampler.js"></script>
     <title>MPC 3000AD</title>
 </head>
   
@@ -63,4 +65,3 @@
     </table>
   </div>
 </div>
-<script src="js/sampler.js"></script>
