--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="mp3kad.css">
+    <link rel="stylesheet" href="mpc3kad.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" </script>
     <script src="js/sampler.js"></script>
     <title>MPC 3000AD</title>
