--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="mpc3kad.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" </script>
-    <script src="js/sampler.js"></script>
+    <script src="mpc3kad.js"></script>
     <title>MPC 3000AD</title>
 </head>
   
