--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="mpc3kad.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"</script>
-    <script src="https://github.com/ph2290/MPC3000AD/blob/main/mpc3kad.js></script>
+    <script src="https://github.com/ph2290/MPC3000AD/blob/main/mpc3kad.js>"</script>
     <title>MPC 3000AD</title>
 </head>
   
