--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="mpc3kad.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="mpc3kad.js"></script>
     <title>MPC 3000AD</title>
 </head>
-  
+<body>
 <div class="container">
   <div id="samplerskin">
     <img src="https://github.com/ph2290/MPC3000AD/blob/main/assets/MPC3KAD1.svg?raw=true" alt="sampler image" />
@@ -64,3 +63,5 @@
     </table>
   </div>
 </div>
+    <script src="mpc3kad.js"></script>
+</body>
