--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>MPC 3000AD</title>
 </head>
 <body>
+    <video autoplay muted loop>
+  <source src="https://github.com/ph2290/MPC3000AD/blob/main/assets/Bio amimation final-hevcmp4.mp4?raw=true" type="video/mp4">
+</video>
   <div class="container">
     <div id="samplerskin">
       <img src="https://github.com/ph2290/MPC3000AD/blob/main/assets/MPC3KAD1.svg?raw=true" alt="sampler image" />
