--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>MPC 3000AD</title>
 </head>
 <body>
-     <video autoplay muted loop style="width: 100%; height: auto;">
-  <source src="https://github.com/ph2290/MPC3000AD/blob/main/assets/Bio amimation final-hevcmp4.mp4?raw=true" type="video/mp4">
+    <video autoplay muted loop playsinline>
+  <source src="https://github.com/ph2290/MPC3000AD/blob/main/assets/Bio%20amimation%20final-hevcmp4.mp4?raw=true" type="video/mp4">
+  Your browser does not support the video tag.
 </video>
   <div class="container">
     <div id="samplerskin">
