--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
    <video autoplay muted loop playsinline disablePictureInPicture>
-  <source src="https://github.com/ph2290/MPC3000AD/blob/main/assets/Bio%20amimation%20final-hevcmp4.mp4?raw=true" type="video/mp4">
-  <source src="https://github.com/ph2290/MPC3000AD/blob/main/assets/Bio%20amimation%20final-hevcmp4.webm?raw=true" type="video/webm">
+  <source src="https://cdn.jsdelivr.net/gh/ph2290/MPC3000AD@main/assets/Bio%20amimation%20final-hevcmp4.mp4" type="video/mp4">
+  <source src="https://cdn.jsdelivr.net/gh/ph2290/MPC3000AD@main/assets/Bio%20amimation%20final-hevcmp4.webm" type="video/webm">
   Your browser does not support the video tag.
 </video>
 <div class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-right" id="mySidebar">
